Small spacing issue resolved

--- a/src/public/landing/custom.css
+++ b/src/public/landing/custom.css
@@ -306,7 +306,7 @@ p
 {
     color: rgba(0, 0, 0, 0.8);
     padding-top: 120px;
-    padding-bottom: 400px;
+    padding-bottom: 200px;
     position: relative;
 }
 
@@ -329,6 +329,7 @@ p
     position: absolute;
     top: -300px;
     right: 0px;
+    z-index: -1;
 }
 
 .slideStart
